[package]
name = "aws-auth"
version = "0.1.0"
authors = ["Yuan Zhang <zhangyuan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
rpassword = "5.0.1"
scraper = "0.12.0"
base64 = "0.13.0"
roxmltree = "0.14.1"
httpmock = "0.6"
config = "0.11"
url = "2.2.2"
