[package]
name = "aws-auth"
version = "0.0.1"
authors = ["Yuan Zhang <zhangyuan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.51"
rpassword = "5.0.1"
scraper = "0.12.0"
base64 = "0.13.0"
roxmltree = "0.14.1"
config = "0.11"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.9.0"
colored = "2"
tokio = { version = "1", features = ["full"] }
aws-sdk-sts = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.5.2", package = "aws-sdk-sts" }
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.2.0", package = "aws-config" }
