[package]
name = "aws-auth"
version = "0.0.1"
authors = ["Yuan Zhang <zhangyuan@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rpassword = "6.0"
scraper = "0.12"
base64 = "0.13"
roxmltree = "0.14"
config = "0.13"
url = "2.2"
log = "0.4.14"
env_logger = "0.9"
colored = "2"
tokio = { version = "1", features = ["full"] }
aws-config = {version = "0.9"}
aws-types = {version = "0.9", features = ["hardcoded-credentials"]}
aws-sdk-sts = "0.14"
